RESOLVED FIXED273344
[visionOS] After returning to element fullscreen from LMK fullscreen, unable to re-enter LMK fullscreen
https://bugs.webkit.org/show_bug.cgi?id=273344
Summary [visionOS] After returning to element fullscreen from LMK fullscreen, unable ...
Andy Estes
Reported 2024-04-26 15:29:27 PDT
SSIA
Attachments
Radar WebKit Bug Importer
Comment 1 2024-04-26 15:29:42 PDT
Andy Estes
Comment 2 2024-04-26 15:36:26 PDT
EWS
Comment 3 2024-04-28 11:28:22 PDT
Committed 278089@main (44488b037c9b): <https://commits.webkit.org/278089@main> Reviewed commits have been landed. Closing PR #27820 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.