Source/WebKit/UIProcess/ios/PageClientImplIOS.h
@@ -340,6 +340,7 @@ private:
 #if ENABLE(VIDEO_PRESENTATION_MODE)
     void didEnterFullscreen() final { };
     void didExitFullscreen() final;
+    void didCleanupFullscreen() final;
 #endif
 
 #if PLATFORM(IOS_FAMILY)
